# scratch

./: ARCHITECTURE.md  Cargo.toml  README.md  dev.sh  how_it_works.md  index.html  rust-toolchain.toml  test.html
.github/workflows/: deploy.yml  test.yml
file/: Cargo.toml  LICENSE
file/src/: lib.rs
scratch-vm/src/: savefile.rs
scratch-vm/src/blocks/: control.rs  operator.rs
src/: app.rs  block.rs  broadcaster.rs  canvas.rs  color.rs  controller.rs  coordinate.rs  error.rs  event_sender.rs  file.rs  fileinput.rs  fileviewer.rs  interface.rs  lib.rs  main.rs  page.rs  pen.rs  runtime.rs  savefile.rs  sprite.rs  sprite_map.rs  sprite_runtime.rs  thread.rs  traced_rwlock.rs  vm.rs
src/blocks/: control.rs  data.rs  event.rs  looks.rs  mod.rs  motion.rs  operator.rs  pen.rs  sensing.rs  sound.rs  test.rs  value.rs
src_tmp/: file.rs  logger.rs
src_tmp/blocks/: event.rs  sensing.rs  value.rs
test_saves/: say.sb3
