[package]
name = "scratch"
version = "0.1.0"
authors = ["Makoto"]
edition = "2018"
license  = "GPL-3.0-or-later"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
zip = { version = "0.5", default-features = false, features = ["deflate"] }
log = { version = "0.4", default-features = false, features = ["release_max_level_info"]}
async-trait = "0.1"
palette = "0.5"
lazy_static = "1.4"
tokio =  { version = "1.5", features = ["sync", "rt", "rt-multi-thread", "macros", "time"] }
futures = "0.3"
rand = { version = "0.8", features = ["small_rng"] }
strum = { version = "0.20", features = ["derive"] }
conrod_core = "0.72"
piston2d-graphics = "0.37" # conrod_piston requires 0.37
conrod_piston = "0.72"
piston_window = "0.114" # piston_window 0.114 depends on piston2d-graphics 0.37
piston-gfx_texture = "0.41"
piston2d-gfx_graphics = "0.70" # piston_window 0.114 requires piston2d-gfx_graphics 0.70
pistoncore-input = "1.0"
flo_curves = "0.5"
usvg = "0.14"
tiny-skia = "0.5"
resvg = "0.14"
image = { version = "0.23", default-features = false, features = ["png"] }
gfx_device_gl = "0.16"
anyhow = "1.0"
thiserror = "1.0"
env_logger = { version = "0.8", default-features = false, features = ["termcolor", "atty", "humantime"] }
clap = "3.0.0-beta.2"
colored = "2.0"
rstest = "0.8"
gfx_core = "0.9.2"
graphics_buffer = { version = "0.7", git = "https://github.com/MakotoE/graphics_buffer" }
itertools = "0.10"
async-lock = "2.3"
fnv = "1.0"