[package]
name = "file"
version = "0.1.0"
authors = ["Makoto"]
edition = "2018"
license  = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
fnv = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
zip = { version = "0.5", default-features = false, features = ["deflate"] }
lazy_static = "1.4"
