[package]
name = "scratch_file"
version = "0.1.0"
authors = ["Makoto"]
edition = "2018"
license  = "MIT"
description = "Scratch 3.0 file structure and parser"
keywords = ["scratch"]
documentation = "https://docs.rs/scratch_file/"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
fnv = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
zip = { version = "0.5", default-features = false, features = ["deflate"] }
lazy_static = "1.4"
